# art

./: .gitignore  README.md  interactive_nb.ipynb  pyproject.toml  references.bib  report.qmd
ARCHIVE/: analysis.ipynb  data_prep.ipynb  model_fit.R  sim.ipynb
simulations/: model_fit.R  model_fit_old.R  sim.ipynb
src/: data_prep.py  power_analysis.py  simulate.py  statistical_tests.py
