[project]
name = "art"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "choix>=0.4.1",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pymc>=5.26.1",
    "rpy2>=3.6.4",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "shortuuid>=1.0.13",
    "snakeviz>=2.2.2",
]
